feat: add crew section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 			</div>
 			<div class="flex flex-col lg:flex-row lg:w-10/12 mx-auto lg:pt-12">
 				<div class="lg:order-2 flex justify-center lg:w-5/12">
-					<img src="./assets/maskot/citra-lakshya_2.png" class="h-72 lg:h-[30rem] lg:-translate-y-10 my-6 lg:my-0" alt="" />
+					<img src="./assets/maskot/citra-lakshya_2.png"
+						class="h-72 lg:h-[30rem] lg:-translate-y-10 my-6 lg:my-0" alt="" />
 				</div>
 				<div class="lg:order-1 px-4 lg:px-0 font-medium lg:w-7/12 lg:text-[22px] lg:text-right">
 					<p class="mb-4">
@@ -159,13 +160,76 @@
 					<div class="w-1/2 flex justify-center">
 						<figure class="highcharts-figure">
 							<div class="highcharts-figure-circle"></div>
-							<div id="gender"></div> 
-					</figure>
+							<div id="gender"></div>
+						</figure>
 					</div>
 					<div class="w-1/2 flex justify-center">
 						<figure class="highcharts-figure">
 							<div id="scholarship"></div>
-					</figure>
+						</figure>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="lg:mb-32 h-screen">
+			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
+				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-8 font-bold uppercase">
+					THE IMPRESIVE CREW
+				</h2>
+			</div>
+
+			<div class="text-primary flex justify-center gap-12 font-medium mb-4">
+				<div class="hover:brightness-125">
+					<a href="#groupOne">Kelompok 1</a>
+				</div>
+				<div class="hover:brightness-125">
+					<a href="#groupTwo">Kelompok 2</a>
+				</div>
+				<div class="hover:brightness-125">
+					<a href="#groupThree">Kelompok 3</a>
+				</div>
+				<div class="hover:brightness-125">
+					<a href="#groupFour">Kelompok 4</a>
+				</div>
+				<div class="hover:brightness-125">
+					<a href="#groupFive">Kelompok 5</a>
+				</div>
+				<div class="hover:brightness-125">
+					<a href="#groupSix">Kelompok 6</a>
+				</div>
+			</div>
+			<div class="w-full lg:w-11/12 mx-auto">
+				<div class="owl-carousel owl-theme" id="crew">
+					<div class="item gap-4" data-hash="groupOne">
+						<div class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4"
+							id="group1">
+						</div>
+					</div>
+					<div class="item" data-hash="groupTwo">
+						<div class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4"
+							id="group2">
+						</div>
+					</div>
+					<div class="item" data-hash="groupThree">
+						<div class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4"
+							id="group3">
+						</div>
+					</div>
+					<div class="item" data-hash="groupFour">
+						<div class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4"
+							id="group4">
+						</div>
+					</div>
+					<div class="item" data-hash="groupFive">
+						<div class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4"
+							id="group5">
+						</div>
+					</div>
+					<div class="item" data-hash="groupSix">
+						<div class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4"
+							id="group6">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -184,12 +248,14 @@
 						<div class="flex flex-col gap-10 pt-8">
 							<div class="flex items-center">
 								<div class="bg-blue-600 h-32 w-64 rounded-3xl">
-									<img src="./assets/community/1.jpg" alt="" class="object-cover rounded-2xl w-full h-full">
+									<img src="./assets/community/1.jpg" alt=""
+										class="object-cover rounded-2xl w-full h-full">
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="bg-blue-600 h-40 w-72 rounded-3xl">
-									<img src="./assets/community/2.jpg" alt="" class="object-cover rounded-2xl w-full h-full">
+									<img src="./assets/community/2.jpg" alt=""
+										class="object-cover rounded-2xl w-full h-full">
 								</div>
 							</div>
 						</div>
@@ -198,12 +264,14 @@
 						<div class="flex flex-col gap-10 pt-8">
 							<div class="flex items-center">
 								<div class="bg-blue-600 h-32 w-64 -translate-y-12 rounded-3xl">
-									<img src="./assets/community/3.jpg" alt="" class="object-cover rounded-2xl w-full h-full">
+									<img src="./assets/community/3.jpg" alt=""
+										class="object-cover rounded-2xl w-full h-full">
 								</div>
 							</div>
 							<div class="flex items-center justify-center">
 								<div class="bg-blue-600 h-52 w-52 -translate-y-16 rounded-3xl">
-									<img src="./assets/community/4.jpg" alt="" class="object-cover rounded-2xl w-full h-full">
+									<img src="./assets/community/4.jpg" alt=""
+										class="object-cover rounded-2xl w-full h-full">
 								</div>
 							</div>
 						</div>
@@ -212,12 +280,14 @@
 						<div class="flex flex-col gap-10 pt-8">
 							<div class="flex items-center">
 								<div class="bg-blue-600 h-52 w-80 translate-y-3 rounded-3xl">
-									<img src="./assets/community/5.png" alt="" class="object-cover rounded-2xl w-full h-full">
+									<img src="./assets/community/5.png" alt=""
+										class="object-cover rounded-2xl w-full h-full">
 								</div>
 							</div>
 							<div class="flex items-center">
 								<div class="bg-blue-600 h-32 w-64 rounded-3xl">
-									<img src="./assets/community/6.jpg" alt="" class="object-cover rounded-2xl w-full h-full">
+									<img src="./assets/community/6.jpg" alt=""
+										class="object-cover rounded-2xl w-full h-full">
 								</div>
 							</div>
 						</div>
@@ -226,6 +296,7 @@
 			</div>
 		</section>
 	</main>
+
 	<section>
 		<div class="relative h-full w-full">
 			<div class="absolute h-full w-full -z-10">
@@ -237,14 +308,14 @@
 
 			<div class="pb-20">
 				<div class="_df_book !bg-transparent" height="500" webgl="true" scrollWheel="false"
-								source="assets/pdf/Selayang Pandang PK 209.pdf"
-								id="df_manual_book">
+					source="assets/pdf/Selayang Pandang PK 209.pdf" id="df_manual_book">
 				</div>
 				<div class="mt-10 text-white w-2/3 mx-auto text-center">
 					<p class="text-xl">
 						Bound by dreams and destiny, LPDP awardees weave memories into a luminous legacy of wisdom.
-Each moment, a sparkling gem, reflects the brilliance of a future crafted by intellect and hope, a
-symphony of knowledge and ambition that lights the path to a brighter tomorrow.
+						Each moment, a sparkling gem, reflects the brilliance of a future crafted by intellect and hope,
+						a
+						symphony of knowledge and ambition that lights the path to a brighter tomorrow.
 					</p>
 					<div>
 						<img class="mt-5 w-1/2 mx-auto" src="/assets/img/line-yellow.png" alt="">
@@ -253,13 +324,15 @@ symphony of knowledge and ambition that lights the path to a brighter tomorrow.
 			</div>
 		</div>
 	</section>
-</main>
-<footer class="text-center p-4 bg-black text-slate-100">Copyright &copy Angkatan PK-237 LPDP</footer>
+	</main>
+	<footer class="text-center p-4 bg-black text-slate-100">Copyright &copy Angkatan PK-237 LPDP</footer>
+
+	<script src="./assets/js/data.js"></script>
 
 	<script src="./dist/vendor/jquery/jquery.min.js"></script>
 	<script src="./dist/vendor/owlcarousel/js/owl.carousel.min.js"></script>
 	<script src="./assets/vendor/dflip/js/dflip.min.js" type="text/javascript"></script>
-<script>
+	<script>
 		$('#representatives').owlCarousel({
 			center: true,
 			loop: true,
@@ -295,12 +368,25 @@ symphony of knowledge and ambition that lights the path to a brighter tomorrow.
 				}
 			}
 		})
+
+		$('#crew').owlCarousel({
+			margin: 20,
+			nav: false,
+			dots: false,
+			URLhashListener: true,
+			startPosition: 'URLHash',
+			responsive: {
+				0: {
+					items: 1
+				},
+			}
+		})
 	</script>
 
 	<script src="https://code.highcharts.com/maps/highmaps.js"></script>
 	<script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
 	<script src="https://code.highcharts.com/highcharts.js"></script>
-	<script src="https://code.highcharts.com/modules/exporting.js"></script>	
+	<script src="https://code.highcharts.com/modules/exporting.js"></script>
 	<script src="https://code.highcharts.com/modules/accessibility.js"></script>
 	<script>
 			(async () => {
@@ -372,157 +458,157 @@ symphony of knowledge and ambition that lights the path to a brighter tomorrow.
 
 
 
-Highcharts.chart('gender', {
-	exporting: { enabled: false },
-    chart: {
-        type: 'pie',
+		Highcharts.chart('gender', {
+			exporting: { enabled: false },
+			chart: {
+				type: 'pie',
 				backgroundColor: 'transparent',
-    },
-		credits: {
-						enabled: false
-		},
-    title: {
-        text: 'BY GENDER',
-        style: {
+			},
+			credits: {
+				enabled: false
+			},
+			title: {
+				text: 'BY GENDER',
+				style: {
 					color: 'white'
 				}
-    },
-    subtitle: {
-        text: '',
-    },
-
-    accessibility: {
-        announceNewData: {
-            enabled: true
-        },
-        point: {
-            valueSuffix: ''
-        }
-    },
-
-    plotOptions: {
-			pie: {
-				borderColor: '#F0A834',
-				borderWidth: 5,
 			},
-			series: {
+			subtitle: {
+				text: '',
+			},
+
+			accessibility: {
+				announceNewData: {
+					enabled: true
+				},
+				point: {
+					valueSuffix: ''
+				}
+			},
+
+			plotOptions: {
+				pie: {
+					borderColor: '#F0A834',
+					borderWidth: 5,
+				},
+				series: {
 					borderRadius: 0,
 					dataLabels: [{
-							enabled: true,
-							distance: '-30%',
-							style: {
-									fontSize: '0.9em',
-									textOutline: 'none'
-							}
+						enabled: true,
+						distance: '-30%',
+						style: {
+							fontSize: '0.9em',
+							textOutline: 'none'
+						}
 					}]
-        }
-    },
+				}
+			},
 
-    tooltip: {
-			headerFormat: '<span style="font-size:11px">{series.name}</span><br>',
-        pointFormat: '{point.name}: {point.y}',
-    },
+			tooltip: {
+				headerFormat: '<span style="font-size:11px">{series.name}</span><br>',
+				pointFormat: '{point.name}: {point.y}',
+			},
 
-    series: [
-        {
-            name: 'Gender',
-            colorByPoint: true,
-            data: [
-                {
-                    name: 'Men',
-                    y: 150,
-										color: '#2f9ed8',
-                },
-                {
-                    name: 'Woman',
-                    y: 30,
-										color: '#e14389',
-                },
-            ]
-        }
-    ],
-});
+			series: [
+				{
+					name: 'Gender',
+					colorByPoint: true,
+					data: [
+						{
+							name: 'Men',
+							y: 150,
+							color: '#2f9ed8',
+						},
+						{
+							name: 'Woman',
+							y: 30,
+							color: '#e14389',
+						},
+					]
+				}
+			],
+		});
 
 
-Highcharts.chart('scholarship', {
-	exporting: { enabled: false },
-    chart: {
-        type: 'pie',
+		Highcharts.chart('scholarship', {
+			exporting: { enabled: false },
+			chart: {
+				type: 'pie',
 				backgroundColor: 'transparent',
-    },
-		credits: {
-						enabled: false
-		},
-    title: {
-        text: 'BY SCHOLARSHIP',
-        style: {
+			},
+			credits: {
+				enabled: false
+			},
+			title: {
+				text: 'BY SCHOLARSHIP',
+				style: {
 					color: 'white'
 				}
-    },
-    subtitle: {
-        text: '',
-    },
-
-    accessibility: {
-        announceNewData: {
-            enabled: true
-        },
-        point: {
-            valueSuffix: ''
-        }
-    },
-
-    plotOptions: {
-			pie: {
-				borderColor: '#F0A834',
-				borderWidth: 5,
 			},
-			series: {
+			subtitle: {
+				text: '',
+			},
+
+			accessibility: {
+				announceNewData: {
+					enabled: true
+				},
+				point: {
+					valueSuffix: ''
+				}
+			},
+
+			plotOptions: {
+				pie: {
+					borderColor: '#F0A834',
+					borderWidth: 5,
+				},
+				series: {
 					borderRadius: 0,
 					dataLabels: [{
-							enabled: true,
-							distance: '-30%',
-							style: {
-									fontSize: '0.9em',
-									textOutline: 'none'
-							}
+						enabled: true,
+						distance: '-30%',
+						style: {
+							fontSize: '0.9em',
+							textOutline: 'none'
+						}
 					}]
-        }
-    },
+				}
+			},
 
-    tooltip: {
-			headerFormat: '<span style="font-size:11px">{series.name}</span><br>',
-        pointFormat: '{point.name}: {point.y}',
-    },
+			tooltip: {
+				headerFormat: '<span style="font-size:11px">{series.name}</span><br>',
+				pointFormat: '{point.name}: {point.y}',
+			},
 
-    series: [
-        {
-            name: 'Scholarship',
-            colorByPoint: true,
-            data: [
-                {
-                    name: 'Master DN',
-                    y: 121,
-                },
-                {
-                    name: 'Doktor DN',
-                    y: 122,
-                },
-								{
-                    name: 'Master LN',
-                    y: 29,
-                },
-                {
-                    name: 'Doktor LN',
-                    y: 30,
-                },
-            ]
-        }
-    ],
-});
+			series: [
+				{
+					name: 'Scholarship',
+					colorByPoint: true,
+					data: [
+						{
+							name: 'Master DN',
+							y: 121,
+						},
+						{
+							name: 'Doktor DN',
+							y: 122,
+						},
+						{
+							name: 'Master LN',
+							y: 29,
+						},
+						{
+							name: 'Doktor LN',
+							y: 30,
+						},
+					]
+				}
+			],
+		});
 
 
-	
+
 	</script>
 </body>
 
