--- a/index.html
+++ b/index.html
@@ -260,18 +260,18 @@
 				</h2>
 			</div>
 
-			<div class="w-full lg:w-8/12 mx-auto p-4 md:p-0">
+			<div class="w-full lg:w-10/12 mx-auto p-4 md:p-0">
 				<div class="owl-carousel owl-theme" id="community">
 					<div class="item">
 						<div class="flex flex-col gap-10 pt-8">
 							<div class="flex items-center">
-								<div class="bg-blue-600 h-32 w-64 rounded-3xl">
+								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 rounded-3xl">
 									<img src="./assets/img/kopdar/banyumas.jpg" alt=""
-										class="object-cover rounded-2xl w-full h-full">
+										class="object-cover object-right md:object-center rounded-2xl w-full h-full">
 								</div>
 							</div>
 							<div class="flex items-center">
-								<div class="bg-blue-600 h-40 w-72 rounded-3xl">
+								<div class="bg-blue-600 md:h-40 md:w-72 w-[22rem] h-52 rounded-3xl">
 									<img src="./assets/img/kopdar/banyumas2.jpg" alt=""
 										class="object-cover object-top rounded-2xl w-full h-full">
 								</div>
@@ -281,13 +281,13 @@
 					<div class="item">
 						<div class="flex flex-col gap-10 pt-8">
 							<div class="flex items-center">
-								<div class="bg-blue-600 h-32 w-64 -translate-y-12 rounded-3xl">
+								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 md:-translate-y-12 rounded-3xl">
 									<img src="./assets/img/kopdar/bogor.jpg" alt=""
 										class="object-cover rounded-2xl w-full h-full">
 								</div>
 							</div>
 							<div class="flex items-center justify-center">
-								<div class="bg-blue-600 h-52 w-52 -translate-y-16 rounded-3xl">
+								<div class="bg-blue-600 md:h-52 md:w-52 w-[22rem] h-52 md:-translate-y-16 rounded-3xl">
 									<img src="./assets/img/kopdar/depok.jpg" alt=""
 										class="object-cover rounded-2xl w-full h-full">
 								</div>
@@ -297,13 +297,13 @@
 					<div class="item">
 						<div class="flex flex-col gap-10 pt-8">
 							<div class="flex items-center">
-								<div class="bg-blue-600 h-52 w-80 translate-y-3 rounded-3xl">
+								<div class="bg-blue-600 md:h-52 md:w-80 w-[22rem] h-52 md:translate-y-3 rounded-3xl">
 									<img src="./assets/img/kopdar/jogja.jpg" alt=""
 										class="object-cover rounded-2xl w-full h-full">
 								</div>
 							</div>
 							<div class="flex items-center">
-								<div class="bg-blue-600 h-32 w-64 rounded-3xl">
+								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 rounded-3xl">
 									<img src="./assets/img/kopdar/jakpus.jpeg" alt=""
 										class="object-cover rounded-2xl w-full h-full">
 								</div>
@@ -313,13 +313,13 @@
 					<div class="item">
 						<div class="flex flex-col gap-10 pt-8">
 							<div class="flex items-center">
-								<div class="bg-blue-600 h-32 w-64 rounded-3xl">
+								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 rounded-3xl">
 									<img src="./assets/img/kopdar/jakpus2.jpeg" alt=""
 										class="object-cover rounded-2xl w-full h-full">
 								</div>
 							</div>
 							<div class="flex items-center">
-								<div class="bg-blue-600 h-40 w-72 rounded-3xl">
+								<div class="bg-blue-600 md:h-40 md:w-72 w-[22rem] h-52 rounded-3xl">
 									<img src="./assets/img/kopdar/lampung.jpeg" alt=""
 										class="object-cover rounded-2xl w-full h-full">
 								</div>
@@ -329,15 +329,15 @@
 					<div class="item">
 						<div class="flex flex-col gap-10 pt-8">
 							<div class="flex items-center">
-								<div class="bg-blue-600 h-32 w-64 -translate-y-12 rounded-3xl">
+								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 md:-translate-y-12 rounded-3xl">
 									<img src="./assets/img/kopdar/sulut.jpg" alt=""
 										class="object-cover object-center rounded-2xl w-full h-full">
 								</div>
 							</div>
 							<div class="flex items-center justify-center">
-								<div class="bg-blue-600 h-52 w-52 -translate-y-16 rounded-3xl">
+								<div class="bg-blue-600 md:h-52 md:w-52 w-[22rem] h-52 md:-translate-y-16 rounded-3xl">
 									<img src="./assets/img/kopdar/sumsel.jpeg" alt=""
-										class="object-cover rounded-2xl w-full h-full">
+										class="object-cover object-bottom md:object-center rounded-2xl w-full h-full">
 								</div>
 							</div>
 						</div>
@@ -345,13 +345,13 @@
 					<div class="item">
 						<div class="flex flex-col gap-10 pt-8">
 							<div class="flex items-center">
-								<div class="bg-blue-600 h-52 w-80 translate-y-3 rounded-3xl">
+								<div class="bg-blue-600 md:h-52 md:w-80 w-[22rem] h-52 md:translate-y-3 rounded-3xl">
 									<img src="./assets/img/kopdar/tangsel2.jpeg" alt=""
 										class="object-cover object-bottom rounded-2xl w-full h-full">
 								</div>
 							</div>
 							<div class="flex items-center">
-								<div class="bg-blue-600 h-32 w-64 rounded-3xl">
+								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 rounded-3xl">
 									<img src="./assets/img/kopdar/jabar.jpg" alt=""
 										class="object-cover rounded-2xl w-full h-full">
 								</div>
@@ -361,13 +361,13 @@
 					<div class="item">
 						<div class="flex flex-col gap-10 pt-8">
 							<div class="flex items-center">
-								<div class="bg-blue-600 h-32 w-64 -translate-y-12 rounded-3xl">
+								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 md:-translate-y-12 rounded-3xl">
 									<img src="./assets/img/kopdar/kalbar.jpg" alt=""
 										class="object-cover rounded-2xl w-full h-full">
 								</div>
 							</div>
 							<div class="flex items-center justify-center">
-								<div class="bg-blue-600 h-52 w-52 -translate-y-16 rounded-3xl">
+								<div class="bg-blue-600 md:h-52 md:w-52 w-[22rem] h-52 md:-translate-y-16 rounded-3xl">
 									<img src="./assets/img/kopdar/tangsel.jpeg" alt=""
 										class="object-cover rounded-2xl w-full h-full">
 								</div>
@@ -377,13 +377,13 @@
 					<div class="item">
 						<div class="flex flex-col gap-10 pt-8">
 							<div class="flex items-center">
-								<div class="bg-blue-600 h-52 w-80 translate-y-3 rounded-3xl">
+								<div class="bg-blue-600 md:h-52 md:w-80 w-[22rem] h-52 translate-y-3 rounded-3xl">
 									<img src="./assets/img/kopdar/ntt.jpg" alt=""
 										class="object-cover object-bottom rounded-2xl w-full h-full">
 								</div>
 							</div>
 							<div class="flex items-center">
-								<div class="bg-blue-600 h-32 w-64 rounded-3xl">
+								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 rounded-3xl">
 									<img src="./assets/img/kopdar/semarang-raya.jpg" alt=""
 										class="object-cover rounded-2xl w-full h-full">
 								</div>
