--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 		rel="stylesheet" />
+
+	<style>
+		#gender, #scholarship {
+			display: block;
+			background-color: #d9d9d9;
+			border: 15px solid #f0a834;
+			height: 400px;
+			width: 400px;
+			border-radius: 100%;
+			padding: 0;
+			margin: 0;
+		}
+	</style>
 </head>
 
 <body>
@@ -118,7 +131,7 @@
 					<h2 class="text-3xl lg:text-8xl text-center py-12 lg:py-16 font-bold uppercase">Meet the
 						Sailor</h2>
 				</div>
-				<div class="w-full relative lg:w-8/12 mx-auto">
+				<div class="w-full h-full flex items-center -translate-y-32 relative lg:w-8/12 mx-auto">
 					<div class="owl-carousel owl-theme" id="representatives">
 						<div class="item">
 							<img src="./assets/representatives/1.png" alt="" class="h-60 lg:h-96 object-contain">
@@ -159,7 +172,6 @@
 				<div class="flex flex-col md:flex-row justify-center items-center py-16 overflow-hidden">
 					<div class="w-1/2 flex justify-center pb-4">
 						<figure class="highcharts-figure">
-							<div class="highcharts-figure-circle"></div>
 							<div id="gender"></div>
 						</figure>
 					</div>
@@ -179,7 +191,7 @@
 				</h2>
 			</div>
 
-			<div class="text-primary grid grid-cols-3 md:flex md:justify-center md:gap-12 font-medium mb-4">
+			<div class="text-primary flex justify-center gap-12 font-medium mb-4">
 				<div class="hover:brightness-125">
 					<a href="#groupOne" class="flex flex-col items-center"> 
 						<span>Kelompok 1</span>
@@ -218,8 +230,8 @@
 				</div>
 			</div>
 			<div class="w-full lg:w-11/12 mx-auto">
-				<div class="owl-carousel owl-theme" id="crew">
-					<div class="item gap-4" data-hash="groupOne">
+				<div class="owl-carousel owl-theme " id="crew">
+					<div class="item gap-4 overflow-y-auto h-[50vh] lg:h-auto" data-hash="groupOne">
 						<div class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4"
 							id="group1">
 						</div>
@@ -474,6 +486,8 @@
 			margin: 20,
 			nav: false,
 			dots: false,
+			mouseDrag: false,
+			touchDrag: false,
 			URLhashListener: true,
 			startPosition: 'URLHash',
 			responsive: {
@@ -568,7 +582,7 @@
 				enabled: false
 			},
 			title: {
-				text: 'BY GENDER',
+				text: '',
 				style: {
 					color: 'white'
 				}
@@ -589,7 +603,8 @@
 			plotOptions: {
 				pie: {
 					borderColor: '#F0A834',
-					borderWidth: 5,
+					borderWidth: 0,
+					borderRadius: 10,
 				},
 				series: {
 					borderRadius: 0,
@@ -640,7 +655,7 @@
 				enabled: false
 			},
 			title: {
-				text: 'BY SCHOLARSHIP',
+				text: '',
 				style: {
 					color: 'white'
 				}
@@ -661,7 +676,8 @@
 			plotOptions: {
 				pie: {
 					borderColor: '#F0A834',
-					borderWidth: 5,
+					borderWidth: 0,
+					borderRadius: 10,
 				},
 				series: {
 					borderRadius: 0,
@@ -687,19 +703,19 @@
 					colorByPoint: true,
 					data: [
 						{
-							name: 'Master DN',
+							name: 'Master <br>DN',
 							y: 121,
 						},
 						{
-							name: 'Doktor DN',
+							name: 'Doktor <br>DN',
 							y: 122,
 						},
 						{
-							name: 'Master LN',
+							name: 'Master <br>LN',
 							y: 29,
 						},
 						{
-							name: 'Doktor LN',
+							name: 'Doktor <br>LN',
 							y: 30,
 						},
 					]
