fix: responsive crew

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 					<div
 						class="mx-6 lg:mr-0 lg:ml-20 overflow-hidden leading-10 flex flex-col py-44 md:py-0 md:justify-center h-full relative">
 						<h3
-							class="md:w-3/5 text-shadow-hero-lg text-[#30608F] text-7xl font-semibold md:font-extrabold md:mb-1 lg:mb-2 md:text-8xl lg:text-9xl">
-							SAIL TO THE SEA OF US
+							class="md:w-[45%] text-shadow-hero-lg text-[#30608F] text-5xl font-semibold md:font-extrabold md:mb-1 lg:mb-2 md:text-7xl lg:text-7xl">
+							NYALA MIMPI INDONESIA, <br>
+							PANCARMU TERANGI DUNIA
 							<img src="./assets/img/wave-icon.png" class="h-8 lg:h-12 inline-block" alt="" />
 						</h3>
 						<img src="/assets/maskot/citra-lakshya_1.png"
@@ -179,7 +180,7 @@
 				</h2>
 			</div>
 
-			<div class="text-primary grid grid-cols-3 md:flex md:justify-center md:gap-12 font-medium mb-4">
+			<div class="text-primary grid grid-rows-3 my-4 grid-flow-col gap-4 md:flex md:justify-center md:gap-12 font-medium mb-4">
 				<div class="hover:brightness-125">
 					<a href="#groupOne" class="flex flex-col items-center"> 
 						<span>Kelompok 1</span>
@@ -217,10 +218,10 @@
 					</a>
 				</div>
 			</div>
-			<div class="w-full lg:w-11/12 mx-auto">
+			<div class="w-5/6 lg:w-11/12 mx-auto">
 				<div class="owl-carousel owl-theme" id="crew">
 					<div class="item gap-4" data-hash="groupOne">
-						<div class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4"
+						<div class="bg-primary bg-opacity-50 flex flex-wrap justify-center gap-4 rounded-2xl text-center p-4 "
 							id="group1">
 						</div>
 					</div>
