feat: add maskot in section crew and community

--- a/index.html
+++ b/index.html
@@ -185,47 +185,47 @@
 			</div>
 		</section>
 
-		<section class="lg:mb-32">
+		<section class="lg:pb-32 relative overflow-hidden">
 			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
 				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-8 font-bold uppercase">
 					THE IMPRESIVE CREW
 				</h2>
 			</div>
-
+			
 			<div class="text-primary grid grid-rows-3 my-4 grid-flow-col gap-4 md:flex md:justify-center md:gap-12 font-medium mb-4">
 				<div class="hover:brightness-125">
 					<a href="#groupOne" class="flex flex-col items-center"> 
-						<span>Kelompok 1</span>
+						<span>Kelompok</span>
 						<span class="font-semibold">Alugoro</span>
 					</a>
 				</div>
 				<div class="hover:brightness-125">
 					<a href="#groupTwo" class="flex flex-col items-center">
-						<span>Kelompok 2</span>
+						<span>Kelompok</span>
 						<span class="font-semibold">Ardadedali</span>
 					</a>
 				</div>
 				<div class="hover:brightness-125">
 					<a href="#groupThree" class="flex flex-col items-center">
-						<span>Kelompok 3</span>
+						<span>Kelompok</span>
 						<span class="font-semibold">Halasan</span>
 					</a>
 				</div>
 				<div class="hover:brightness-125">
 					<a href="#groupFour" class="flex flex-col items-center">
-						<span>Kelompok 4</span>
+						<span>Kelompok</span>
 						<span class="font-semibold">Mandau</span>
 					</a>
 				</div>
 				<div class="hover:brightness-125">
 					<a href="#groupFive" class="flex flex-col items-center">
-						<span>Kelompok 5</span>
+						<span>Kelompok</span>
 						<span class="font-semibold">Nagapasa</span>
 					</a>
 				</div>
 				<div class="hover:brightness-125">
 					<a href="#groupSix" class="flex flex-col items-center">
-						<span>Kelompok 6</span>
+						<span>Kelompok</span>
 						<span class="font-semibold">Sampar</span>
 					</a>
 				</div>
@@ -264,9 +264,13 @@
 					</div>
 				</div>
 			</div>
+
+			<img class="absolute w-1/3 md:w-1/5 right-0 translate-x-1/3  bottom-0 z-20" src="./assets/maskot/citra.png" alt="">
+
+			
 		</section>
 
-		<section class="lg:mb-32 h-screen">
+		<section class="pb-24 lg:pb-44 relative">
 			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
 				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-8 font-bold uppercase">
 					COMMUNITY GATHERING
@@ -406,6 +410,8 @@
 
 				</div>
 			</div>
+
+			<img class="absolute bottom-10 -translate-x-1/4 w-1/3 md:w-1/5 left-0 z-20" src="./assets/maskot/laksya.png" alt="">
 		</section>
 	</main>
 
