feat: add desc in section map

--- a/index.html
+++ b/index.html
@@ -167,7 +167,15 @@
 			<div class="w-full bg-gradient-to-b from-[#00171e] to-black">
 				<div class=" h-full w-full absolute -z-10"></div>
 				<div class="p-0 text-white pt-32">
-					<h2 class="text-3xl lg:text-8xl text-center pb-8  lg:pb-12 font-bold glow">TREASURE MAP</h2>
+					<h2 class="text-3xl lg:text-8xl text-center pb-2  lg:pb-4 font-bold glow">TREASURE MAP</h2>
+					<div>
+						<img class="w-1/2 mx-auto" src="/assets/img/line-yellow.png" alt="">
+					</div>
+				</div>
+				<div class="mt-4 mb-8 text-white w-10/12 md:w-2/3 mx-auto text-center">
+					<p class="text-xs sm:text-sm md:text-lg">
+						Unveiling Indonesia's enchanted map, this section reveals the luminous origins of LPDP awardees, with each province sparkling with the count of scholars, weaving a magical tapestry of knowledge.
+					</p>
 				</div>
 				<div id="demografi" class="w-full"></div>
 				<div class="flex flex-col md:flex-row justify-center items-center py-16 overflow-hidden">
