--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="md:h-auto h-screen">
+		<section class="h-screen">
 			<div class="relative h-full w-full">
 				<div class="absolute h-full w-full -z-10">
 					<img src="./assets/img/deepsea.jpg" alt="" class="object-cover h-full w-full brightness-[.35]">
@@ -135,28 +135,39 @@
 				<div class="w-full h-full flex items-center -translate-y-32 relative lg:w-8/12 mx-auto">
 					<div class="owl-carousel owl-theme" id="representatives">
 						<div class="item">
-							<img src="./assets/representatives/1.png" alt="" class="h-60 lg:h-96 object-contain">
+							<img src="./assets/representatives/siwi.png" alt="" class="h-60 lg:h-96 object-contain">
 							<div class="text-center text-white text-sm lg:text-lg">
 								<span class="block font-semibold">Ketua Angkatan</span>
 								<span class="block">Siwi Mauliddia Handayani</span>
 							</div>
 						</div>
 						<div class="item">
-							<img src="./assets/representatives/2.png" alt="" class="h-60 lg:h-96 object-contain">
+							<img src="./assets/representatives/taufik.webp" alt="" class="h-60 lg:h-96 object-contain">
+							<div class="text-center text-white text-sm lg:text-lg">
+								<span class="block font-semibold">Koor. Bidang Kreatif dan Multimedia</span>
+								<span class="block">Taufik Hidayat</span>
+							</div>
+						</div>
+						<div class="item">
+							<img src="./assets/representatives/putri.png" alt="" class="h-60 lg:h-96 object-contain">
 							<div class="text-center text-white text-sm lg:text-lg">
 								<span class="block font-semibold">Koor. Administrasi dan Database</span>
 								<span class="block">Putri Shania Noor</span>
 							</div>
 						</div>
 						<div class="item">
-							<img src="./assets/representatives/3.png" alt="" class="h-60 lg:h-96 object-contain">
+							<img src="./assets/representatives/protasius.png" alt="" class="h-60 lg:h-96 object-contain">
 							<div class="text-center text-white text-sm lg:text-lg">
 								<span class="block font-semibold">Koor. Program dan Humas</span>
 								<span class="block">Protasius D. P. B. Isyudanto</span>
 							</div>
 						</div>
 						<div class="item">
-							<img src="./assets/representatives/2.png" alt="" class="h-60 lg:h-96 object-contain">
+							<img src="./assets/representatives/arief.webp" alt="" class="h-60 lg:h-96 object-contain">
+							<div class="text-center text-white text-sm lg:text-lg">
+								<span class="block font-semibold">Koor. Bidang Transportasi dan Logistik</span>
+								<span class="block">Arief Abdurrahman Hakim</span>
+							</div>
 						</div>
 					</div>
 				</div>
