feat: change pie chart color pallet

--- a/index.html
+++ b/index.html
@@ -644,12 +644,12 @@
 						{
 							name: 'Men',
 							y: 150,
-							color: '#2f9ed8',
+							color: '#30608F',
 						},
 						{
 							name: 'Woman',
 							y: 30,
-							color: '#e14389',
+							color: '#F0A834',
 						},
 					]
 				}
@@ -716,19 +716,23 @@
 					data: [
 						{
 							name: 'Master <br>DN',
-							y: 121,
+							y: 121,	
+							color: '#38c6f3'
 						},
 						{
 							name: 'Doktor <br>DN',
 							y: 122,
-						},
-						{
-							name: 'Master <br>LN',
-							y: 29,
+							color: '#30608F'
 						},
 						{
 							name: 'Doktor <br>LN',
 							y: 30,
+							color: '#fdd756',
+						},
+						{
+							name: 'Master <br>LN',
+							y: 29,
+							color: '#F0A834',
 						},
 					]
 				}
